# ml-introduction

./: 1_explore_data.ipynb  1_houses.csv  1_houses_unlabelled.csv  1_introduction.ipynb  2_all_houses.txt  2_linear_regression.ipynb  3_perceptron.ipynb  4_logistic_classifier.ipynb  5_naive_bayes.ipynb  6_keras_mnist.ipynb  7_playing_with_tensors.ipynb  8_keras_imdb.ipynb  9_keras_regression.ipynb  A_cnn.ipynb  README.md  pyproject.toml
